--- a/src/main/resources/application-doswrapper-aws-dos-soap-aws-wiremock-cpsc-stub-na.yml
+++ b/src/main/resources/application-doswrapper-aws-dos-soap-aws-wiremock-cpsc-stub-na.yml
@@ -6,6 +6,6 @@
 # This is the URL for the Wiremock Server, serving stubbed DoS Soap responses
 dos:
   service:
-    url: http://35.178.35.104:8080/app/api/webservices
+    url: http://localhost:7010/app/api/webservices
 
 # No Configuration is needed for the Stubbed Capacity Service Client
