Moved httpClient.xml into a java class. Amended bean loading order to get httpClient defined by HttpClientConfiguration class Added settings to application.yml for timeout and max concurrent connections

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -38,6 +38,13 @@ dos:
   service:
     url: DummyValue
 
+  httpClient:
+    socketTimeout: 120000
+    connectTimeout: 12000
+    connectionRequestTimeout: 1000
+    maxConnTotal: 400
+    maxConnPerRoute: 200
+
 # Spring Boot Actuator configuration
 management:
   endpoints:
