Adds basic auth to DoS Proxy and configures it to use REST batch

--- a/src/main/resources/application-doswrapper-aws-dos-soap-aws-wiremock-cpsc-rest-aws.yml
+++ b/src/main/resources/application-doswrapper-aws-dos-soap-aws-wiremock-cpsc-rest-aws.yml
@@ -16,4 +16,4 @@ capacity:
   service:
     client:
       api:
-        url: https://www.bjss-nhsd-capacityservice.co.uk/capacity
+        url: https://www.bjss-nhsd-capacityservice.co.uk
