--- a/src/main/resources/application-doswrapper-aws-dos-stub-na-cpsc-rest-aws.yml
+++ b/src/main/resources/application-doswrapper-aws-dos-stub-na-cpsc-rest-aws.yml
@@ -11,4 +11,4 @@ capacity:
   service:
     client:
       api:
-        url: https://www.bjss-nhsd-capacityservice.co.uk/capacity
+        url: https://www.bjss-nhsd-capacityservice.co.uk
