--- a/src/main/resources/application-doswrapper-local-dos-stub-na-cpsc-rest-local.yml
+++ b/src/main/resources/application-doswrapper-local-dos-stub-na-cpsc-rest-local.yml
@@ -11,7 +11,7 @@ capacity:
   service:
     client:
       api:
-        url: http://localhost:7020/capacity
+        url: http://localhost:7020
 
 server:
   ssl:
