--- a/src/main/resources/application-doswrapper-aws-dos-soap-prod-cpsc-rest-aws.yml
+++ b/src/main/resources/application-doswrapper-aws-dos-soap-prod-cpsc-rest-aws.yml
@@ -16,6 +16,6 @@ capacity:
   service:
     client:
       api:
-       # url: http://capacityservicetest-env.smtchzepkk.us-east-1.elasticbeanstalk.com/capacity
+       # url: http://capacityservicetest-env.smtchzepkk.us-east-1.elasticbeanstalk.com
        # username: dummyValue
        # password: dummyValue
