--- a/src/main/resources/application-doswrapper-aws-dos-soap-uat-cpsc-rest-aws.yml
+++ b/src/main/resources/application-doswrapper-aws-dos-soap-uat-cpsc-rest-aws.yml
@@ -16,4 +16,4 @@ capacity:
   service:
     client:
       api:
-        url: https://www.bjss-nhsd-capacityservice.co.uk/capacity
+        url: https://www.bjss-nhsd-capacityservice.co.uk
