--- a/src/main/resources/application-doswrapper-local-dos-soap-uat-cpsc-rest-local.yml
+++ b/src/main/resources/application-doswrapper-local-dos-soap-uat-cpsc-rest-local.yml
@@ -16,7 +16,7 @@ capacity:
   service:
     client:
       api:
-        url: http://localhost:7020/capacity
+        url: http://localhost:7020
         username: dummyValue
         password: dummyValue
 
