--- a/src/main/resources/application-doswrapper-local-dos-soap-uat-cpsc-rest-local.yml
+++ b/src/main/resources/application-doswrapper-local-dos-soap-uat-cpsc-rest-local.yml
@@ -6,7 +6,7 @@
 # This is the URL for the UAT DoS Instance
 dos:
   service:
-    url: https://uat.pathwaysdos.nhs.uk/app/api/webservices
+    url: https://uat3.pathwaysdos.nhs.uk/app/api/webservices
 
 # This is the URL for the Local Capacity Service API - note the API username and password should be passed in every
 # call by the Capacity Service client but these values are passed using runtime environment variables.
