Texas-2 plus DEBUG level logging

--- a/Dockerfile-Texas
+++ b/Dockerfile-Texas
@@ -1,6 +1,14 @@
 FROM openjdk:8-jdk-alpine
 VOLUME /tmp
 
+ARG DOS_PROXY_VERSION
+# ARG SPRING_PROFILES_ACTIVE
+# ARG CAPACITY_SERVICE_USERNAME
+# ARG CAPACITY_SERVICE_PASSWORD
+# ARG CAPACITY_SERVICE_CLIENT_API_URL
+# ARG DOS_SERVICE_URL
+# ARG SERVER_SSL_ENABLED
+
 ADD ./target/a2si-dos-proxy-${DOS_PROXY_VERSION}.jar dos-proxy.jar
 ADD ./keystore.jks keystore.jks
 
