--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.nhsd.a2si</groupId>
     <artifactId>a2si-dos-proxy</artifactId>
-    <version>1.2.1-SNAPSHOT</version>
+    <version>tx-1.2.1-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <name>dos-proxy</name>
@@ -171,7 +171,7 @@
                             <target>
                                 <copy file="Dockerfile" todir="${project.build.directory}"/>
                                 <replace file="${project.build.directory}/Dockerfile" >
-                                    <replacefilter token="@{version}" value="${project.version}" />
+                                    <replacefilter token="${DOS_PROXY_VERSION}" value="${project.version}" />
                                 </replace>
                             </target>
                         </configuration>
