--- a/pom.xml
+++ b/pom.xml
@@ -73,12 +73,21 @@
             <artifactId>a2si-capacity-information</artifactId>
             <version>1.4.0-SNAPSHOT</version>
         </dependency>
+
         <!-- Capacity Service Client -->
         <dependency>
             <groupId>com.nhsd.a2si</groupId>
             <artifactId>a2si-capacity-service-client</artifactId>
             <version>1.6.0-SNAPSHOT</version>
         </dependency>
+
+        <!-- Capacity Reporting Service Client -->
+        <dependency>
+            <groupId>com.nhsd.a2si</groupId>
+            <artifactId>a2si-capacity-reporting-service-client</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+
 
     </dependencies>
 
