--- a/pom.xml
+++ b/pom.xml
@@ -150,6 +150,27 @@
             </plugin>
 
             <plugin>
+        <groupId>com.spotify</groupId>
+             <artifactId>dockerfile-maven-plugin</artifactId>
+             <version>1.4.3</version>
+             <executions>
+                 <execution>
+                     <id>default</id>
+                     <goals>
+                         <goal>build</goal>
+                     </goals>
+                 </execution>
+             </executions>
+             <configuration>
+             <repository>a2si-cd-dos-proxy</repository>
+                 <tag>${project.version}</tag>
+                 <buildArgs>
+                     <VERSION>${project.version}</VERSION>
+                 </buildArgs>
+             </configuration>
+         </plugin>
+<!--
+            <plugin>
                 <groupId>com.spotify</groupId>
                 <artifactId>docker-maven-plugin</artifactId>
                 <version>1.0.0</version>
@@ -169,7 +190,7 @@
                     </resources>
                 </configuration>
             </plugin>
-
+-->
             <plugin>
                 <artifactId>maven-antrun-plugin</artifactId>
                 <version>1.8</version>
