Updated yml for local stubbed env

--- a/src/main/resources/application-doswrapper-local-dos-soap-local-wiremock-cpsc-stub-na.yml
+++ b/src/main/resources/application-doswrapper-local-dos-soap-local-wiremock-cpsc-stub-na.yml
@@ -13,3 +13,13 @@ dos:
 server:
   ssl:
     enabled: false
+    
+capacity:
+  service:
+    username: dummy
+    password: dummy
+    
+reporting:
+  service:
+    username: dummy
+    password: dummy
